--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -26,7 +26,7 @@
 			}
 		  </style>
 </head>
-<body style="display: relative;">
+<body>
 <div class="site-wrapper-inner" style="background-color: rgba(0, 0, 0, 0.5);">
 	<div class="container d-flex justify-content-center align-items-center">
 		<div class="d-flex p-2">
@@ -55,14 +55,14 @@
 		</div>
 		<div class="card text-white bg-dark mb-3 login-card" style="width: 412px;">
 			<div class="card-body">
+                <h4 title="card-title">Login to uicCourse</h4>
+                <br>
 				<form action="{% url 'login_receiver' %}" method="post">
 					{% csrf_token %}
 					<div class="form-group">
-						<label class="text-white">Username</label>
-						<input type="text" class="form-control" placeholder="ID" name="username">
+						<input type="text" class="form-control" placeholder="Username" name="username">
 					</div>
 					<div class="form-group">
-						<label class="text-white">Password</label>
 						<input type="password" class="form-control" placeholder="Password" name="password">
 					</div>
 					<button type="submit" class="btn btn-primary">Login</button> <a href="{% url 'signup_invite' %}" class="btn btn-success">Sign up</a>
@@ -71,7 +71,7 @@
 			<div class="card-footer">
 				<div class="row">
 					<a href="https://uichcc.com">
-						<img src="https://uichcc.com/img/uichccwhite.svg" style="height: 30px; margin-left: 1rem;">
+						<img src="https://uichcc.com/img/uichccwhite.svg" style="height: 30px; margin-left: 1rem;" title="UIC HCC Computer Society">
 					</a>
 					<span class="d-flex align-items-center text-white" style="margin-left: 1rem;: ">uicCourse
 						<span class="badge badge-warning" style="margin: 0 0.5rem;" data-toggle="tooltip" data-placement="right" title="Login is required.">
