--- a/course/templates/tools/newic.html
+++ b/course/templates/tools/newic.html
@@ -7,7 +7,6 @@
     <meta name="author" content="">
     <title>Admin tools: Invitation code | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
       <style>
@@ -20,10 +19,14 @@
               width: 100%;
               height: 100%;
             }
+            .login-card{
+				position: absolute;
+        		top: 50%;
+        		transform: translateY(-50%);
+			}
       </style>
 </head>
   <body>
-
     <header>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -33,8 +36,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home_page' %}">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home_page' %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'course_list' %}">Course</a>
@@ -46,7 +49,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                     {% if userdata.is_superuser %}
                     <h6 class="dropdown-header">Admin function</h6>
-                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                    <a class="dropdown-item active" href="{% url 'invitation_code' %}">Invitation Code</a>
                     <div class="dropdown-divider"></div>
                     {% endif %}
                     <h6 class="dropdown-header">Account Relative</h6>
@@ -58,100 +61,73 @@
         </div>
       </nav>
     </header>
-<div class="site-wrapper-inner" style="background-color: rgba(0, 0, 0, 0.7);">
+<div class="site-wrapper-inner" style="background-color: rgba(0, 0, 0, 0.7);"></div>
     <!-- Begin page content -->
-    <main role="main" class="container">
-        {% if errormessage != NULL %}
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            {{ errormessage }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-        {% endif %}
-    <br>
-      <h1 class="mt-5 text-white">Invitation Code · UIC Index</h1>
-      <small class="text-secondary">For a more transparent future</small>
-      <hr style="border-color: #FFFFFF;">
-<div class="row">
-    <div class="col-8">
-    {% if messages %}
-        {% for message in messages %}
-            {% if message.tags == 'success' %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {% else %}
-                {% if message.tags == 'warning' %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                {% else %}
-                    {% if message.tags == 'error' %}
-                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    {% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <div class="d-flex p-2">
+            {% if messages %} {% for message in messages %} {% if message.tags == 'success' %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {% else %} {% if message.tags == 'warning' %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {% else %} {% if message.tags == 'error' %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {% else %}
                         <div class="alert alert-info alert-dismissible fade show" role="alert">
-                    {% endif %}
-                {% endif %}
-            {% endif %}
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        {% endfor %}
-    {% endif %}
-        <h4 class="text-white">Each invitation code can only be used once</h4>
-        <table class="table table-hover table-dark" style="margin-top: 1rem;">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Code</th>
-                    <th scope="col">Usability</th>
-                    <th scope="col">Operation</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for code in codes %}
-                    <tr>
-                        <th scope="row">{{ code.id }}</th>
-                        <td>{{ code.invitation_code}}</td>
-                        <td>
-                            {% if code.usability %}
-                                Valid
-                            {% else %}
-                                Invalid
-                            {% endif %}
-                        </td>
-                        <td>
-                            {% if code.usability %}
-                                <a href="{% url 'invitation_code_invalid' code.id %}" class="btn-danger btn-sm">Invalid it</a>
-                            {% else %}
-                            {% endif %}
-                        </td>
-                    {% endfor %}
-                    </tr>
-
-
-            </tbody>
-        </table>
-        </div>
-    <div class="col-4">
-<div>
-      <form action="{% url 'invitation_code' %}" method="post">
-          {% csrf_token %}
-          <div class="form-group">
-            <label class="text-white">Generate New Code(s)</label>
-            <input type="text" class="form-control" placeholder="How Many?" name="amount">
-          </div>
-          <button type="submit" class="btn btn-primary">Generate</button>
-        </form>
-    </div>
-    </div>
-</div>
-    </main>
-</div>
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
-      </div>
-    </footer>
+                            {% endif %} {% endif %} {% endif %} {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endfor %} {% endif %}
+                    </div>
+                    <div class="card text-white bg-dark mb-3 login-card w-75" style="margin-top: 10rem;">
+                        <div class="card-body">
+                            <form action="{% url 'invitation_code' %}" method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label class="text-white">Generate New Code(s)</label>
+                                    <input type="text" class="form-control" placeholder="How Many?" name="amount">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Generate</button>
+                            </form>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-hover justify-content-between" style="margin-top: 1rem;">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Code</th>
+                                        <th scope="col">Operation</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for code in codes %}
+                                    <tr>
+                                        <td>{{ code.invitation_code}}</td>
+                                        <td>
+                                            {% if code.usability %}
+                                            <a href="{% url 'invitation_code_invalid' code.id %}" class="btn-danger btn-sm">Invalid it</a>
+                                            {% else %} {% endif %}
+                                        </td>
+                                        {% endfor %}
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="card-footer">
+                            <div class="row">
+                                <a href="https://uichcc.com">
+                                    <img src="https://uichcc.com/img/uichccwhite.svg" style="height: 30px; margin-left: 1rem;" title="UIC HCC Computer Society">
+                                </a>
+                                <span class="d-flex align-items-center text-white" style="margin-left: 1rem;: ">uicCourse
+                                    <span class="badge badge-warning" style="margin: 0 0.5rem;" data-toggle="tooltip" data-placement="right" title="Login is required.">
+                                        Early Access
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
