--- a/course/templates/account/edit.html
+++ b/course/templates/account/edit.html
@@ -25,8 +25,8 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home_page' %}">Home</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'course_list' %}">Course</a>
             </li>
           </ul>
             <ul class="navbar-nav ml-auto">
