--- a/course/templates/account/info.html
+++ b/course/templates/account/info.html
@@ -11,8 +11,7 @@
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
       <style>
-          html,
-body {
+          html, body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
 
@@ -42,8 +41,8 @@ body {
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home_page' %}">Home</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'course_list' %}">Course</a>
             </li>
           </ul>
             <ul class="navbar-nav ml-auto">
