--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -135,7 +135,7 @@
       </div>
 
     <br>
-    <div class="card">
+    <div class="card box-shadow">
     <div class="card-header text-white bg-dark">Course Comments</div>
     <div class="card-body">
         {% if coursecomments %}
