--- a/course/templates/account/edit.html
+++ b/course/templates/account/edit.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -11,46 +11,48 @@
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
 </head>
-  <body>
+<body>
 
-    <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="{% url 'home_page' %}">UIC Course Index</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home_page' %}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'course_list' %}">Course</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home_page' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'course_list' %}">Course</a>
+                </li>
+            </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    {% if userdata.is_superuser %}
-                    <h6 class="dropdown-header">Admin function</h6>
-                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
-                    <div class="dropdown-divider"></div>
-                    {% endif %}
-                    <h6 class="dropdown-header">Account Relative</h6>
-                    <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
-                    <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
-                </div>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                        {% if userdata.is_superuser %}
+                            <h6 class="dropdown-header">Admin function</h6>
+                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                            <div class="dropdown-divider"></div>
+                        {% endif %}
+                        <h6 class="dropdown-header">Account Relative</h6>
+                        <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
+                        <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <!-- Begin page content -->
-    <main role="main" class="container">
-        {% if messages %}
+<!-- Begin page content -->
+<main role="main" class="container">
+    {% if messages %}
         {% for message in messages %}
             {% if message.tags == 'success' %}
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -65,52 +67,55 @@
                     {% endif %}
                 {% endif %}
             {% endif %}
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
         </div>
         {% endfor %}
     {% endif %}
-        <br>
+    <br>
     <div class="card">
-      <div class="card-header text-white bg-dark">Change Profile for <code>{{ userdata.username }} (UID:{{ userdata.id }})</code></div>
-      <div class="card-body">
-          <form action="{% url 'account_info_submit' %}" method="post">
-            {% csrf_token %}
-            <div class="row">
-                <div class="col">
-                    <label>First Name</label>
-                    <input type="text" class="form-control" name="fn" placeholder="e.g. John" value="{{ userdata.first_name }}">
+        <div class="card-header text-white bg-dark">Change Profile for <code>{{ userdata.username }}
+            (UID:{{ userdata.id }})</code></div>
+        <div class="card-body">
+            <form action="{% url 'account_info_submit' %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col">
+                        <label>First Name</label>
+                        <input type="text" class="form-control" name="fn" placeholder="e.g. John"
+                               value="{{ userdata.first_name }}">
+                    </div>
+                    <div class="col">
+                        <label>Last Name</label>
+                        <input type="text" class="form-control" name="ln" placeholder="e.g. Doe"
+                               value="{{ userdata.last_name }}">
+                    </div>
                 </div>
-                <div class="col">
-                    <label>Last Name</label>
-                    <input type="text" class="form-control" name="ln" placeholder="e.g. Doe" value="{{ userdata.last_name }}">
+                <div>
+                    <label>Email</label>
+                    <input type="email" class="form-control" value="{{ userdata.email }}" disabled>
                 </div>
-            </div>
-              <div>
-                  <label>Email</label>
-                  <input type="email" class="form-control" value="{{ userdata.email }}" disabled>
-              </div>
-              <hr>
-              <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
-          </form>
-      </div>
-      </div>
-    </main>
+                <hr>
+                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
+            </form>
+        </div>
+    </div>
+</main>
 
-    <footer class="footer">
-      <div class="container">
+<footer class="footer">
+    <div class="container">
         <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
-    {% load static %}
-    <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+{% load static %}
+<script src="{% static "js/popper.min.js" %}"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
