--- a/course/templates/account/password.html
+++ b/course/templates/account/password.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -11,45 +11,47 @@
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
 </head>
-  <body>
-    <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<body>
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="{% url 'home_page' %}">UIC Course Index</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home_page' %}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'course_list' %}">Course</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home_page' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'course_list' %}">Course</a>
+                </li>
+            </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    {% if userdata.is_superuser %}
-                    <h6 class="dropdown-header">Admin function</h6>
-                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
-                    <div class="dropdown-divider"></div>
-                    {% endif %}
-                    <h6 class="dropdown-header">Account Relative</h6>
-                    <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
-                    <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
-                </div>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                        {% if userdata.is_superuser %}
+                            <h6 class="dropdown-header">Admin function</h6>
+                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                            <div class="dropdown-divider"></div>
+                        {% endif %}
+                        <h6 class="dropdown-header">Account Relative</h6>
+                        <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
+                        <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <!-- Begin page content -->
-    <main role="main" class="container">
-        {% if messages %}
+<!-- Begin page content -->
+<main role="main" class="container">
+    {% if messages %}
         {% for message in messages %}
             {% if message.tags == 'success' %}
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -64,62 +66,67 @@
                     {% endif %}
                 {% endif %}
             {% endif %}
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
         </div>
         {% endfor %}
     {% endif %}
-        <br>
+    <br>
     <div class="card">
-      <div class="card-header text-white bg-dark">Change Password for <code>{{ userdata.username }} (UID:{{ userdata.id }})</code></div>
-      <div class="card-body">
-          <form action="{% url 'account_password_submit' %}" method="post" id="passwordForm" name="passwordForm">
-            {% csrf_token %}
-              <div>
-                  <p><b>Your new password should longer than 8 characters</b></p>
-                    <input type="password" name="opw" class="form-control" placeholder="Old Password" required="required">
+        <div class="card-header text-white bg-dark">Change Password for <code>{{ userdata.username }}
+            (UID:{{ userdata.id }})</code></div>
+        <div class="card-body">
+            <form action="{% url 'account_password_submit' %}" method="post" id="passwordForm" name="passwordForm">
+                {% csrf_token %}
+                <div>
+                    <p><b>Your new password should longer than 8 characters</b></p>
+                    <input type="password" name="opw" class="form-control" placeholder="Old Password"
+                           required="required">
                     <br>
-                    <input type="password" name="pw" id="inputPassword1" class="form-control" placeholder="New Password" required="required">
+                    <input type="password" name="pw" id="inputPassword1" class="form-control" placeholder="New Password"
+                           required="required">
                     <br>
-                    <input type="password" id="inputPassword2" class="form-control" placeholder="Enter The Password Again" required="required">
-              </div>
-              <hr>
-              <p>After setting new password, you will logout by the system, and then you can try to login with your new password.</p>
-              <a href="javascript:passwordCheck();" class="btn btn-primary btn-lg btn-block">Save Change</a>
-          </form>
-      </div>
-      </div>
-    </main>
+                    <input type="password" id="inputPassword2" class="form-control"
+                           placeholder="Enter The Password Again" required="required">
+                </div>
+                <hr>
+                <p>After setting new password, you will logout by the system, and then you can try to login with your
+                    new password.</p>
+                <a href="javascript:passwordCheck();" class="btn btn-primary btn-lg btn-block">Save Change</a>
+            </form>
+        </div>
+    </div>
+</main>
 
-    <footer class="footer">
-      <div class="container">
+<footer class="footer">
+    <div class="container">
         <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
-    {% load static %}
-    <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script>
-        function passwordCheck() {
-            pw = document.getElementById('inputPassword1').value;
-            check = document.getElementById('inputPassword2').value;
-            if (pw !== check){
-                alert('Password Not Match!');
-            }else if (pw == ''){
-                alert('Password can\'t be empty!');
-            }else if (pw.length < 8){
-                alert('Password is too short!');
-            }else{
-                document.forms["passwordForm"].submit();
-            }
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+{% load static %}
+<script src="{% static "js/popper.min.js" %}"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script>
+    function passwordCheck() {
+        pw = document.getElementById('inputPassword1').value;
+        check = document.getElementById('inputPassword2').value;
+        if (pw !== check) {
+            alert('Password Not Match!');
+        } else if (pw == '') {
+            alert('Password can\'t be empty!');
+        } else if (pw.length < 8) {
+            alert('Password is too short!');
+        } else {
+            document.forms["passwordForm"].submit();
         }
-    </script>
-  </body>
+    }
+</script>
+</body>
 </html>
