--- a/course/templates/course/detail_edit.html
+++ b/course/templates/course/detail_edit.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -11,45 +11,47 @@
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
 </head>
-  <body>
+<body>
 
-    <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="{% url 'home_page' %}">UIC Course Index</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home_page' %}">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
-           <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home_page' %}">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    {% if userdata.is_superuser %}
-                    <h6 class="dropdown-header">Admin function</h6>
-                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
-                    <div class="dropdown-divider"></div>
-                    {% endif %}
-                    <h6 class="dropdown-header">Account Relative</h6>
-                    <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
-                    <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
-                </div>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                        {% if userdata.is_superuser %}
+                            <h6 class="dropdown-header">Admin function</h6>
+                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                            <div class="dropdown-divider"></div>
+                        {% endif %}
+                        <h6 class="dropdown-header">Account Relative</h6>
+                        <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
+                        <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <!-- Begin page content -->
-    <main role="main" class="container">
+<!-- Begin page content -->
+<main role="main" class="container">
     {% if messages %}
         {% for message in messages %}
             {% if message.tags == 'success' %}
@@ -65,87 +67,93 @@
                     {% endif %}
                 {% endif %}
             {% endif %}
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
         </div>
         {% endfor %}
     {% endif %}
-        <br>
+    <br>
     <div class="card">
-      <div class="card-header text-white bg-dark">Course Edit: {{ coursedata.course_code | upper }}</div>
-      <form action="{% url 'course_edit_submit' %}" method="post">
-          {% csrf_token %}
-      <div class="card-body ">
-          <div class="form-group">
-        <input type="text" class="form-control" value="{{ coursedata.course_name_en }}" name="cne" placeholder="Course English Name">
-          </div>
-<div class="form-group">
-        <input type="text" class="form-control" value="{{ coursedata.course_name_cn }}" name="cnc" placeholder="Course Chinese Name">
-</div>
-          <div class="row">
-              <div class="col">
-              <div class="card border-primary">
-                <div class="card-body text-primary">
-                  <h5 class="card-title">Course Code</h5>
-                    <div class="form-group">
-        <input type="text" class="form-control" value="{{ coursedata.course_code | upper }}" name="cc" placeholder="Course Code">
-</div>
+        <div class="card-header text-white bg-dark">Course Edit: {{ coursedata.course_code | upper }}</div>
+        <form action="{% url 'course_edit_submit' %}" method="post">
+            {% csrf_token %}
+            <div class="card-body ">
+                <div class="form-group">
+                    <input type="text" class="form-control" value="{{ coursedata.course_name_en }}" name="cne"
+                           placeholder="Course English Name">
                 </div>
-              </div>
-              </div>
-              <div class="col">
-              <div class="card border-success">
-                <div class="card-body text-success">
-                  <h5 class="card-title">Course Class</h5>
-                    <div class="form-group">
-        <input type="text" class="form-control" value="{{ coursedata.course_class | upper }}" name="cclass" placeholder="Course Class">
-</div>
+                <div class="form-group">
+                    <input type="text" class="form-control" value="{{ coursedata.course_name_cn }}" name="cnc"
+                           placeholder="Course Chinese Name">
                 </div>
-              </div>
-              </div>
-              <div class="col">
-              <div class="card border-danger">
-                <div class="card-body text-danger">
-                  <h5 class="card-title">Course Units</h5>
-                    <div class="form-group">
-        <input type="number" class="form-control" value="{{ coursedata.course_units }}" name="cu" placeholder="Course Units">
-</div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-primary">
+                            <div class="card-body text-primary">
+                                <h5 class="card-title">Course Code</h5>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" value="{{ coursedata.course_code | upper }}"
+                                           name="cc" placeholder="Course Code">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-success">
+                            <div class="card-body text-success">
+                                <h5 class="card-title">Course Class</h5>
+                                <div class="form-group">
+                                    <input type="text" class="form-control"
+                                           value="{{ coursedata.course_class | upper }}" name="cclass"
+                                           placeholder="Course Class">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-danger">
+                            <div class="card-body text-danger">
+                                <h5 class="card-title">Course Units</h5>
+                                <div class="form-group">
+                                    <input type="number" class="form-control" value="{{ coursedata.course_units }}"
+                                           name="cu" placeholder="Course Units">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              </div>
-          </div>
-          <hr>
-          <div class="form-group">
-              <label>Course Descriptions:</label>
-        <textarea class="form-control" rows="5" name="cd">{{ coursedata.course_descriptions }}</textarea>
-              {% if coursedata %}
-                <input type="hidden" name="cid" value="{{ coursedata.id }}">
-              {% else %}
-                <input type="hidden" name="cid" value="0">
-              {% endif %}
-</div>
+                <hr>
+                <div class="form-group">
+                    <label>Course Descriptions:</label>
+                    <textarea class="form-control" rows="5" name="cd">{{ coursedata.course_descriptions }}</textarea>
+                    {% if coursedata %}
+                        <input type="hidden" name="cid" value="{{ coursedata.id }}">
+                    {% else %}
+                        <input type="hidden" name="cid" value="0">
+                    {% endif %}
+                </div>
+            </div>
+            <div class="form-group text-center">
+                <input type="submit" class="btn btn-primary" value="Save Edit">
+            </div>
+        </form>
     </div>
-          <div class="form-group text-center">
-          <input type="submit" class="btn btn-primary" value="Save Edit">
-          </div>
-  </form>
-        </div>
-    </main>
+</main>
 
-    <footer class="footer">
-      <div class="container">
+<footer class="footer">
+    <div class="container">
         <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
-    {% load static %}
-    <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+{% load static %}
+<script src="{% static "js/popper.min.js" %}"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
